# ChangeLog for x11-misc/gmrun
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/gmrun/ChangeLog,v 1.10 2005/12/29 20:48:25 nelchael Exp $

  29 Dec 2005; Krzysiek Pawlik <nelchael@gentoo.org> metadata.xml,
  -gmrun-0.9.ebuild, gmrun-0.9.2.ebuild:
  Homepage is back, added metadata.xml.

  19 Jun 2005; Jonathan Smith <smithj@gentoo.org> gmrun-0.9.ebuild,
  gmrun-0.9.2.ebuild:
  homepage dead... added sourceforge project page

  09 Mar 2005; Tom Martin <slarti@gentoo.org> gmrun-0.9.2.ebuild:
  Stable on amd64; initial ~sparc keyword.

  20 Jun 2004; Ian Leitch <port001@gentoo.org> gmrun-0.9.2.ebuild,
  gmrun-0.9.ebuild:
  No need to set S, Added IUSE

  10 May 2004; Travis Tilley <lv@gentoo.org> gmrun-0.9.2.ebuild:
  added ~amd64 keyword

*gmrun-0.9.2 (16 Nov 2003)

  02 Aug 2003; Jason A Mobarak <aether@gentoo.org> metadata.xml:
  gmrun intially added a while ago, changed the herd to no-herd for now, packges
  like this are hard to herd-ize. Gmrun is an awesome run box util, everyone
  should use it.

*gmrun-0.9 (02 Aug 2003)