@@ -1,4 +1,4 @@
-MD5 ee2969a7462b75740ae313bdff88ad37 ChangeLog 1106
+MD5 0efa3bc0664b46fe9246667e669e01ee ChangeLog 1215
 MD5 c9361c98968cb4deeb4675393bdbd300 files/digest-gmrun-0.9.2 62
-MD5 b3262e3e1669283184b2f39772f813bb gmrun-0.9.2.ebuild 705
+MD5 01676704e6843763974726c3eeab8b34 gmrun-0.9.2.ebuild 699
 MD5 cdb11033a3fa6525334cecf938961c07 metadata.xml 166
