@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/gmrun/gmrun-0.9.2.ebuild,v 1.9 2005/12/29 20:48:25 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/gmrun/gmrun-0.9.2.ebuild,v 1.10 2005/12/29 20:52:15 nelchael Exp $
 
 IUSE=""
 DESCRIPTION="A GTK-2 based launcher box with bash style auto completion!"
@@ -16,12 +16,11 @@ DEPEND=">=x11-libs/gtk+-2.2.0
 
 src_install() {
 	make DESTDIR=${D} install
-	dodoc AUTHORS COPYING ChangeLog README NEWS
+	dodoc AUTHORS ChangeLog README NEWS
 }
 
 pkg_postinst(){
-	echo
+	einfo
 	einfo "Gmrun now featers a ~/.gmrunrc see /usr/share/gmrun/gmrunrc for help"
-	echo
+	einfo
 }
-
