@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/gmrun
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/gmrun/ChangeLog,v 1.10 2005/12/29 20:48:25 nelchael Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/gmrun/ChangeLog,v 1.11 2005/12/29 20:52:15 nelchael Exp $
+
+  29 Dec 2005; Krzysiek Pawlik <nelchael@gentoo.org> gmrun-0.9.2.ebuild:
+  ebuild cleanup, removed COPYING.
 
   29 Dec 2005; Krzysiek Pawlik <nelchael@gentoo.org> metadata.xml,
   -gmrun-0.9.ebuild, gmrun-0.9.2.ebuild:
